fix: table of content stuck at bottom

--- a/sass/styles/components/content/content.scss
+++ b/sass/styles/components/content/content.scss
@@ -144,11 +144,11 @@
     }
 
     .content-container{
-        height: calc(100vh - 100px);
+        height: calc(100% - 100px);
         background-color: $vp-background;
     }
 
     .section-tabs{
-        height: calc(100vh - 100px);
+        height: calc(100% - 100px);
     }
 }
